--- a/Works.css
+++ b/Works.css
@@ -141,3 +141,36 @@
   color: var(--primary-color);
   margin-bottom: 0;
 }
+.img1 {
+  max-width: 500px;
+  background-color: #ffcdb2;
+  padding: 15px 20px 15px 20px;
+  margin-top: 70px;
+}
+.project-head {
+  margin-top: 100px;
+  font-weight: 650;
+  font-size: 33px;
+  color: var(--secondary-color);
+}
+.project-link {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  text-decoration: none;
+  padding: 15px 25px 15px 25px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 2px;
+  transition: all 200ms ease-in-out;
+}
+.project-link:hover {
+  border: 1px solid var(--secondary-color);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  text-decoration: none;
+}
+p {
+  margin-bottom: 70px;
+  margin-top: 20px;
+  color: var(--secondary-color);
+}
