--- a/About.css
+++ b/About.css
@@ -28,12 +28,14 @@
   margin-top: 80px;
 }
 .content {
-  margin-top: 80px;
-  margin-left: 10px;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 35px;
   color: var(--secondary-color);
 }
 .head {
-  margin-top: 90px;
+  margin-top: 70px;
   color: var(--secondary-color);
   font-size: 33px;
   font-weight: 800;
@@ -47,7 +49,7 @@
 }
 .heading4 {
   color: var(--secondary-color);
-  margin-top: 80px;
+  margin-top: 150px;
   text-align: center;
   margin-bottom: 50px;
   font-weight: 800;
@@ -474,4 +476,25 @@ body {
     margin-top: -100px;
     margin-bottom: 80px;
   }
+}
+span.navbar-toggler-icon {
+  color: var(--secondary-color);
+}
+.CV-link {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  text-decoration: none;
+  padding: 15px 25px 15px 25px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 2px;
+  transition: all 200ms ease-in-out;
+  margin-top: 40px;
+  margin-left: 270px;
+}
+.CV-link:hover {
+  border: 1px solid var(--secondary-color);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  text-decoration: none;
 }
