--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-top: 110px;
+  margin-top: 170px;
   margin-right: -40px;
 }
 .ddpic {
@@ -34,6 +34,8 @@ a {
 a:hover {
   font-size: 21px;
   box-shadow: 1px 1px 1px 1px black;
+  text-decoration: none;
+  color: var(--primary-color);
 }
 body {
   background-image: url("src/Back.png");
@@ -45,13 +47,16 @@ body {
 }
 .heading1 {
   color: #cb9c93;
+  font-weight: 700;
 }
 
 h2 {
   color: #cb9c93;
+  font-weight: 700;
 }
 h3 {
   color: #cb9c93;
+  font-weight: 700;
 }
 .navbar {
   background-color: transparent;
@@ -129,4 +134,25 @@ a {
     margin-right: -15px;
     margin-left: 20px;
   }
+}
+.social {
+  text-align: center;
+  margin-top: 120px;
+}
+
+.social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid var(--secondary-color);
+  margin: 0 8px;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
+.social > a:hover {
+  opacity: 0.9;
 }
